--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KIDDYKIDS"
-        mc:Ignorable="d" Loaded="Window_Loaded"
+        mc:Ignorable="d"
         Title="{Binding ElementName=MainFrame, Path=Content.Title}" Height="700" Width="1300" WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
