--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KIDDYKIDS"
         mc:Ignorable="d"
@@ -18,8 +19,8 @@
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Grid Background="{StaticResource ColorMain}">
-            <Button x:Name="BtnBack" Click="BtnBack_Click"  HorizontalAlignment="Right" Margin="0,10,10,10" Width="170" FontWeight="Bold" FontSize="36" >Назад</Button>
+        <Grid>
+            <Button x:Name="BtnBack" Click="BtnBack_Click"  HorizontalAlignment="Right" Margin="0,10,10,10" Width="150" Height="60" FontWeight="Bold" FontSize="36" >Назад</Button>
             <TextBlock FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding ElementName=MainFrame, Path=Content.Title}"></TextBlock>
             <StackPanel Orientation="Horizontal" >
                 <Image Margin="10"></Image>
@@ -29,13 +30,13 @@
 
         <Frame x:Name="MainFrame" Grid.Row="1" NavigationUIVisibility="Hidden" ContentRendered="MainFrame_ContentRendered"></Frame>
 
-        <Grid Grid.Row="2" Background="{StaticResource ColorMain}">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20 0 0 0">
-                <Button x:Name="BtnTurnONMusic" Click="BtnTurnONMusic_Click" Width="50" Height="45">
-                    <Image Stretch="Fill" Source="ON.png"/>
+        <Grid Grid.Row="2">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
+                <Button x:Name="BtnTurnONMusic" Click="BtnTurnONMusic_Click" Margin="20 0 0 0" Cursor="Hand">
+                    <Image Stretch="Fill" Source="/Image/Icone/ON.png"/>
                 </Button>
-                <Button x:Name="BtnTurnOFFMusic" Click="BtnTurnOFFMusic_Click" Width="50" Height="45" Margin="-50 0 0 0" Visibility="Hidden">
-                    <Image Stretch="Fill" Source="OFF.png"/>
+                <Button x:Name="BtnTurnOFFMusic" Click="BtnTurnOFFMusic_Click" Margin="-63 0 0 0 " Visibility="Hidden">
+                    <Image Stretch="Fill" Source="/Image/Icone/OFF.png"/>
                 </Button>
             </StackPanel>
         </Grid>
