--- a/PageMain.xaml
+++ b/PageMain.xaml
@@ -2,10 +2,11 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:KIDDYKIDS"
       mc:Ignorable="d" 
-      d:DesignHeight="700" d:DesignWidth="1300"
+      d:DesignHeight="550" d:DesignWidth="1300"
       Title="PageMain">
     
     <Grid Background="#FFCAFFF8">
