--- a/PageMessageBox.xaml
+++ b/PageMessageBox.xaml
@@ -6,23 +6,40 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KIDDYKIDS"
         mc:Ignorable="d"
-        Title="PageMessageBox" Height="200" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Сообщение" Height="150" Width="250" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
+        WindowStyle="None" AllowsTransparency="True" Loaded="Window_Loaded" Background="{x:Null}">
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <TextBlock Name="MessageContainer" TextWrapping="WrapWithOverflow" Margin="10"/>
-        <StackPanel Name="ButtonContainer" Grid.Row="1" Orientation="Horizontal"
-                    HorizontalAlignment="Right" Margin="10">
-            <StackPanel.Resources>
-                <Style TargetType="Button">
-                    <Setter Property="MinHeight" Value="25"/>
-                    <Setter Property="MinWidth" Value="75"/>
-                    <Setter Property="Margin" Value="10,0,0,0"/>
-                </Style>
-            </StackPanel.Resources>
-        </StackPanel>
+        <materialDesign:Card Margin="10" UniformCornerRadius="15">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="15*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="15*"/>
+                    <RowDefinition Height="1*"/>
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="00 10 0 0">
+                    <TextBlock TextWrapping="Wrap" Margin="5" TextAlignment="Center" 
+                               Text="Идет производсто*" FontSize="18">
+                        <TextBlock.ToolTip>
+                            <ToolTip Background="AliceBlue" Foreground="Black" HasDropShadow="False"
+                                     Placement="Relative" HorizontalOffset="15" VerticalOffset="10">
+                                <StackPanel>
+                                    <TextBlock FontSize="14" TextAlignment="Center">Определение уровня сложности</TextBlock>
+                                    <TextBlock FontSize="14" TextAlignment="Center">Строительная среда, выступы, препятствия и объекты</TextBlock>
+                                    <TextBlock FontSize="14" TextAlignment="Center">Программирование / сценарии</TextBlock>
+                                    <TextBlock FontSize="14" TextAlignment="Center">Цифровое редактирование</TextBlock>
+                                </StackPanel>
+                            </ToolTip>
+                        </TextBlock.ToolTip>
+                    </TextBlock>
+                    <Button x:Name="BtnExet" Click="BtnExet_Click" Margin="10">ОК</Button>
+                </StackPanel>
+            </Grid>
+        </materialDesign:Card>
     </Grid>
 </Window>
