--- a/GamesForKids/PageGamesForKids.xaml
+++ b/GamesForKids/PageGamesForKids.xaml
@@ -1,15 +1,16 @@
 ﻿<Page x:Class="KIDDYKIDS.GamesForKids.PageGamesForKids"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:KIDDYKIDS.GamesForKids"
       mc:Ignorable="d" 
-     d:DesignHeight="550" d:DesignWidth="1300"
+      d:DesignHeight="550" d:DesignWidth="1300"
       Title="Игры для малышей">
 
     <Viewbox>
-        <Grid Background="#FFCAFFF8" Height="93" Width="220">
+        <Grid Background="White" Height="93" Width="220">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="10"/>
                 <ColumnDefinition/>
