--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,7 +10,9 @@
 
     <Window.Resources>
         <MediaPlayer x:Key="mediaPlayer"/>
+
     </Window.Resources>
+    
 
     <Grid>
         <Grid.RowDefinitions>
@@ -19,18 +21,19 @@
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Grid>
-            <Button x:Name="BtnBack" Click="BtnBack_Click"  HorizontalAlignment="Right" Margin="0,10,10,10" Width="150" Height="60" FontWeight="Bold" FontSize="36" >Назад</Button>
-            <TextBlock FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding ElementName=MainFrame, Path=Content.Title}"></TextBlock>
+        <Grid Background="#FFCAFFF8">
+            <Button x:Name="BtnBack" Click="BtnBack_Click"  HorizontalAlignment="Right" Margin="0,10,10,10" Width="150" Height="60" FontWeight="Bold" FontSize="36" FontFamily="Sitka Text" >Назад</Button>
+            <TextBlock FontSize="48" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding ElementName=MainFrame, Path=Content.Title}"></TextBlock>
             <StackPanel Orientation="Horizontal" >
                 <Image Margin="10" Stretch="Fill"  Source="/Image/KIDDYKIDSImage.png"></Image>
-                <TextBlock HorizontalAlignment="Center" Text="KIDDYKIDS" FontWeight="Bold" FontSize="36" VerticalAlignment="Center"></TextBlock>
+                <TextBlock  HorizontalAlignment="Center" Text="KIDDYKIDS" FontWeight="Bold" FontSize="36" VerticalAlignment="Center" ></TextBlock>
             </StackPanel>
         </Grid>
 
-        <Frame x:Name="MainFrame" Grid.Row="1" NavigationUIVisibility="Hidden" ContentRendered="MainFrame_ContentRendered"></Frame>
+        <Frame x:Name="MainFrame" Grid.Row="1" NavigationUIVisibility="Hidden" ContentRendered="MainFrame_ContentRendered"
+               BorderBrush="LimeGreen" BorderThickness="2"/>
 
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="2" Background="#FFCAFFF8">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
                 <Button x:Name="BtnTurnONMusic" Click="BtnTurnONMusic_Click" Margin="20 0 0 0" Cursor="Hand">
                     <Image Stretch="Fill" Source="/Image/Icone/ON.png"/>
