--- a/PageMain.xaml
+++ b/PageMain.xaml
@@ -7,7 +7,7 @@
       xmlns:local="clr-namespace:KIDDYKIDS"
       mc:Ignorable="d" 
       d:DesignHeight="550" d:DesignWidth="1300"
-      Title="Главная">
+      Title="Каталог игр">
 
     <Grid Background="White">
         <Grid.ColumnDefinitions>
