--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,14 +6,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KIDDYKIDS"
         mc:Ignorable="d"
+        
         Title="{Binding ElementName=MainFrame, Path=Content.Title}" WindowStartupLocation="CenterScreen" Icon="KIDDYKIDSIcone.png"
-        MinHeight="700" MinWidth="1000" ResizeMode="NoResize" Height="700" Width="1000">
+        MinHeight="700" MinWidth="1000" Height="700" Width="1000">
 
     <Window.Resources>
         <MediaPlayer x:Key="mediaPlayer"/>
-
     </Window.Resources>
-    
+
 
     <Grid>
         <Grid.RowDefinitions>
@@ -21,7 +21,6 @@
             <RowDefinition></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
-
         <Grid Background="#FF9800">
             <Button x:Name="BtnBack" Click="BtnBack_Click"  HorizontalAlignment="Right" Margin="0,10,10,10" Width="150" Height="60" FontWeight="Bold" FontSize="36" FontFamily="Sitka Text" >Назад</Button>
             <TextBlock FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding ElementName=MainFrame, Path=Content.Title}"></TextBlock>
@@ -30,13 +29,14 @@
             </StackPanel>
         </Grid>
 
+
         <Frame x:Name="MainFrame" Grid.Row="1" NavigationUIVisibility="Hidden" ContentRendered="MainFrame_ContentRendered"
                BorderBrush="Yellow" BorderThickness="2"/>
 
         <Grid Grid.Row="2" Background="#FF9800">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
                 <Button x:Name="BtnTurnONMusic" Click="BtnTurnONMusic_Click"
-                        Margin="20 0 0 0" Cursor="Hand" Width="70" Height="40"> 
+                        Margin="20 0 0 0" Cursor="Hand" Width="70" Height="40">
                     <Image Stretch="Fill" Source="/Image/Icone/ON.png"/>
                 </Button>
                 <Button x:Name="BtnTurnOFFMusic" Click="BtnTurnOFFMusic_Click"
